src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Canvass_Area_Name__c</fullName>
        <label>Canvass Area Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Canvass_Zip_Codes__c</fullName>
        <description>Information to help Inside Sales attribute lead source</description>
        <label>Canvass Zip Codes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competition__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if Other Solar Companies Present</inlineHelpText>
        <label>Competition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Host_NA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Host NA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Host__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Host</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dimension_4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 4</label>
        <referenceTo>c2g__codaDimension4__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Estimated_Event_Fees_Expenses__c</fullName>
        <label>Estimated Event Fees/Expenses ($)</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Event_Staffing__c</fullName>
        <inlineHelpText>Total Number of Astrum Solar Employees Working</inlineHelpText>
        <label>Estimated Event Staffing</label>
        <picklist>
            <picklistValues>
                <fullName>1 Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 Employees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 Employees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4-5 Employees</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt;5 Employees</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Estimated_Event_Time_Frame__c</fullName>
        <inlineHelpText>Approximate Time Spent Tabling</inlineHelpText>
        <label>Estimated Event Time Frame</label>
        <picklist>
            <picklistValues>
                <fullName>1 Day Tabling Events Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>An Hour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A Few Hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>½ Day</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Day</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Event_Name__c</fullName>
        <inlineHelpText>First 8 letters will be used in the Campaign Name</inlineHelpText>
        <label>Event Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Official_Name__c</fullName>
        <description>Name as it appears in Event Promotional Materials</description>
        <inlineHelpText>Name as it appears in Event Promotional Materials</inlineHelpText>
        <label>Event Official Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Type_Detail_Addl_Detail__c</fullName>
        <label>Event Type Add&apos;l Detail</label>
        <picklist>
            <controllingField>Event_Type_Detail__c</controllingField>
            <picklistValues>
                <fullName>Customer Invited All/Most</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Astrum Invited All/Most</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer/Astrum Invited Mix</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Event_Type_Detail__c</fullName>
        <label>Event Type Detail</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>Home</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Industry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Festival/Fair</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local Solar/Green Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Community Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Event/Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Location</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invited Participant (Panel)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invited Speaker (Own Session)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scheduled Self (Own Session)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner Sponsored</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Sponsored</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Install</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>During Project Install</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Install</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tied to Project Install</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tied to Solar Open House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current Customers in Vicinity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Current Customers in Vicinity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Sure – Was Just In the Area</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Event_Venue__c</fullName>
        <label>Event Venue</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Attendance__c</fullName>
        <label>Expected Attendance/Distribution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extended_End_Date__c</fullName>
        <formula>IF (One_Day_Event__c = TRUE, 
    StartDate + 7,
    EndDate + 7
)</formula>
        <label>Extended End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>One_Day_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <label>One Day Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PR_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if Media Coverage of Event</inlineHelpText>
        <label>PR Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Referal_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referal Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Campaigns (Referal Account)</relationshipLabel>
        <relationshipName>Campaigns1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Retailer_Name__c</fullName>
        <label>Retailer Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Region_s__c</fullName>
        <label>Sales Region(s)</label>
        <picklist>
            <picklistValues>
                <fullName>MA Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NYC Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OH Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WNY Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA Region</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT Region</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <picklist>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WV</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>State__c</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>rstk__AllActiveCampaigns</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>rstk__MyActiveCampaigns</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <recordTypes>
        <fullName>DER_Outbound_Referral</fullName>
        <active>true</active>
        <label>DER Outbound Referral</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>FullAccess</sharingModel>
    <validationRules>
        <fullName>Check_Updation_of_Name_Related_Fields</fullName>
        <active>true</active>
        <errorConditionFormula>AND( TODAY() &gt;= PRIORVALUE(StartDate),   OR (ISCHANGED(Type), ISCHANGED(StartDate) , ISCHANGED(City__c), ISCHANGED(State__c)
, ISCHANGED(Event_Name__c), ISCHANGED(Retailer_Name__c), ISCHANGED(Customer_Host__c), ISCHANGED(Canvass_Area_Name__c)   ))</errorConditionFormula>
        <errorMessage>You are not allowed to change the fields tied to Campaign Name once the Campaign is Started.</errorMessage>
    </validationRules>
</CustomObject>